Refactor OraxenDatapack for code style improvements
Replaces deprecated Bukkit.getWorlds().get(0) with getFirst(), adds final modifiers to method parameters and local variables, and improves exception handling consistency. These changes enhance code readability and maintainability.