@@ -17,18 +17,18 @@ import java.nio.charset.StandardCharsets;
 import java.util.List;
 
 public abstract class OraxenDatapack {
-    protected static final World defaultWorld = Bukkit.getWorlds().get(0);
+    protected static final World defaultWorld = Bukkit.getWorlds().getFirst();
     protected final File datapackFolder;
     protected final JsonObject datapackMeta = new JsonObject();
     protected final boolean isFirstInstall;
     protected final boolean datapackEnabled;
     protected final String name;
 
-    protected OraxenDatapack(String name, String description, int packFormat) {
+    protected OraxenDatapack(final String name, final String description, final int packFormat) {
         this.datapackFolder = defaultWorld.getWorldFolder().toPath()
                 .resolve("datapacks/" + name).toFile();
 
-        JsonObject data = new JsonObject();
+        final JsonObject data = new JsonObject();
         data.addProperty("description", description);
         data.addProperty("pack_format", packFormat);
         datapackMeta.add("pack", data);
@@ -40,10 +40,10 @@ public abstract class OraxenDatapack {
 
     protected void writeMCMeta() {
         try {
-            File packMeta = datapackFolder.toPath().resolve("pack.mcmeta").toFile();
+            final File packMeta = datapackFolder.toPath().resolve("pack.mcmeta").toFile();
             packMeta.createNewFile();
             FileUtils.writeStringToFile(packMeta, datapackMeta.toString(), StandardCharsets.UTF_8);
-        } catch (IOException e) {
+        } catch (final IOException e) {
             e.printStackTrace();
         }
     }
@@ -51,7 +51,7 @@ public abstract class OraxenDatapack {
     public void clearOldDataPack() {
         try {
             FileUtils.deleteDirectory(datapackFolder);
-        } catch (IOException e) {
+        } catch (final IOException e) {
             e.printStackTrace();
         }
     }
@@ -68,7 +68,7 @@ public abstract class OraxenDatapack {
         return BukkitWrapper.get().isDatapackEnabled(getDatapackKey(), defaultWorld);
     }
 
-    protected void enableDatapack(boolean enabled) {
+    protected void enableDatapack(final boolean enabled) {
         BukkitWrapper.get().setDatapackEnabled(this.name, enabled);
     }
 
